--- a/css/main.css
+++ b/css/main.css
@@ -484,13 +484,14 @@ section {
 
 #single-portfolio .close-folio-item {
   position: absolute;
-  top: 30px;
+  top: 100px;
   font-size: 34px;
   width: 34px;
   height: 34px;
   left: 50%;
   color: #999;
   margin-left: -17px;
+   z-index: 1;
 }
 
 /*************************
@@ -870,7 +871,7 @@ section {
 
 .form-control {
   background-color: transparent;
-  border-color: rgba(255,255,255,.1);
+  border-color: rgba(255,255,255,1);
   height: 50px;
   border-radius: 0;
   box-shadow: none;
